# ccl_4_0_rev6a

./: .gitignore  CCL4MigrationNotes.txt  CMakeLists.txt  ChangeLog  ReleaseNotes.txt  clean.cmd
autom4te.cache/: output.1  requests  traces.1
ccl_lib/vc10/: ccl_lib.sln  ccl_lib.vcxproj
ccl_lib/vc12/: ccl_lib.sln  ccl_lib.vcxproj  ccl_lib.vcxproj.filters
ccl_lib/vc14/: ccl_lib.sln  ccl_lib.vcxproj
examples/CigiDummyIG/source/: DefaultProc.cpp  DummyIG.cpp  XAccelerationCtrl.cpp  XAccelerationCtrl.h  XAnimationCtrl.cpp  XAnimationCtrl.h  XArtPartCtrl.cpp  XArtPartCtrl.h  XAtmosCtrl.cpp  XAtmosCtrl.h  XCelestialCtrl.cpp  XCelestialCtrl.h  XCollDetSegDef.cpp  XCollDetSegDef.h  XCollDetVolDef.cpp  XCollDetVolDef.h  XCompCtrl.cpp  XCompCtrl.h  XConfClampEntityCtrl.cpp  XConfClampEntityCtrl.h  XEntityCtrl.cpp  XEntityCtrl.h  XEntityPositionCtrl.cpp  XEntityPositionCtrl.h  XEnvCondReq.cpp  XEnvCondReq.h  XEnvRgnCtrl.cpp  XEnvRgnCtrl.h  XEventNotification.cpp  XHatHotReq.cpp  XHatHotReq.h  XIGCtrl.cpp  XIGCtrl.h  XLosSegReq.cpp  XLosSegReq.h  XLosVectReq.cpp  XLosVectReq.h  XMaritimeSurfaceCtrl.cpp  XMaritimeSurfaceCtrl.h  XMotionTrackCtrl.cpp  (+39 more)
examples/CigiDummyIG/vc10/: CigiDummyIG.sln  CigiDummyIG.vcxproj
examples/CigiDummyIG/vc12/: CigiDummyIG.def  CigiDummyIG.sln  CigiDummyIG.vcxproj  CigiDummyIG.vcxproj.filters
examples/CigiMiniHost/source/: MiniHost.cpp  XAerosolResp.cpp  XAerosolResp.h  XAnimationStop.cpp  XAnimationStop.h  XCollDetSegResp.cpp  XCollDetSegResp.h  XCollDetVolResp.cpp  XCollDetVolResp.h  XEventNotification.cpp  XEventNotification.h  XHatHotResp.cpp  XHatHotResp.h  XHatHotXResp.cpp  XHatHotXResp.h  XIGMsg.cpp  XIGMsg.h  XLosResp.cpp  XLosResp.h  XLosXResp.cpp  XLosXResp.h  XMaritimeSurfaceResp.cpp  XMaritimeSurfaceResp.h  XPositionResp.cpp  XPositionResp.h  XSOF.cpp  XSOF.h  XSensorResp.cpp  XSensorResp.h  XSensorXResp.cpp  XSensorXResp.h  XTerrestrialSurfaceResp.cpp  XTerrestrialSurfaceResp.h  XWeatherCondResp.cpp  XWeatherCondResp.h
examples/CigiMiniHost/vc10/: CigiMiniHost.sln  CigiMiniHost.vcxproj
examples/CigiMiniHost/vc12/: CigiMiniHost.sln  CigiMiniHost.vcxproj  MiniHost.def
examples/tinyxml/vc10/: tinyxml.sln  tinyxmlSTL.vcxproj  tinyxml_lib.vcxproj
examples/tinyxml/vc12/: tinyxml.sln  tinyxmlSTL.vcxproj  tinyxml_lib.vcxproj
examples/tinyxml/vc14/: tinyxml.sln  tinyxmlSTL.vcxproj  tinyxml_lib.vcxproj
include/: CigiAccelerationCtrlV4.h  CigiAerosolRespV3.h  CigiAerosolRespV4.h  CigiAllPackets.h  CigiAnimationCtrlV4.h  CigiAnimationStopV3.h  CigiAnimationStopV4.h  CigiArtPartCtrlV3.h  CigiArtPartCtrlV4.h  CigiAtmosCtrl.h  CigiAtmosCtrlV4.h  CigiBaseAerosolResp.h  CigiBaseAnimationCtrl.h  CigiBaseAnimationStop.h  CigiBaseArtPartCtrl.h  CigiBaseCircleSymbolData.h  CigiBaseCircleSymbolTextureData.h  CigiBaseCollDetSegDef.h  CigiBaseCollDetSegResp.h  CigiBaseCollDetVolDef.h  CigiBaseCollDetVolResp.h  CigiBaseCompCtrl.h  CigiBaseConfClampEntityCtrl.h  CigiBaseEarthModelDef.h  CigiBaseEntityCtrl.h  CigiBaseEntityPositionCtrl.h  CigiBaseEnvCondReq.h  CigiBaseEnvCtrl.h  CigiBaseEnvRgnCtrl.h  CigiBaseEventNotification.h  CigiBaseHatHotReq.h  CigiBaseHatHotResp.h  CigiBaseIGCtrl.h  CigiBaseIGMsg.h  CigiBaseLosResp.h  CigiBaseLosSegReq.h  CigiBaseLosVectReq.h  CigiBaseMaritimeSurfaceCtrl.h  CigiBaseMaritimeSurfaceResp.h  CigiBaseMotionTrackCtrl.h  (+147 more)
source/: CigiAccelerationCtrlV4.cpp  CigiAerosolRespV3.cpp  CigiAerosolRespV4.cpp  CigiAnimationCtrlV4.cpp  CigiAnimationStopV3.cpp  CigiAnimationStopV4.cpp  CigiArtPartCtrlV1.cpp  CigiArtPartCtrlV2.cpp  CigiArtPartCtrlV3.cpp  CigiArtPartCtrlV4.cpp  CigiAtmosCtrl.cpp  CigiAtmosCtrlV4.cpp  CigiBaseAerosolResp.cpp  CigiBaseAnimationCtrl.cpp  CigiBaseArtPartCtrl.cpp  CigiBaseCircleSymbolData.cpp  CigiBaseCircleSymbolTextureData.cpp  CigiBaseCollDetSegDef.cpp  CigiBaseCollDetSegResp.cpp  CigiBaseCollDetVolDef.cpp  CigiBaseCollDetVolResp.cpp  CigiBaseConfClampEntityCtrl.cpp  CigiBaseEarthModelDef.cpp  CigiBaseEntityCtrl.cpp  CigiBaseEntityPositionCtrl.cpp  CigiBaseEnvCondReq.cpp  CigiBaseEnvRgnCtrl.cpp  CigiBaseEventNotification.cpp  CigiBaseHatHotReq.cpp  CigiBaseIGCtrl.cpp  CigiBaseLosResp.cpp  CigiBaseLosSegReq.cpp  CigiBaseLosVectReq.cpp  CigiBaseMaritimeSurfaceCtrl.cpp  CigiBaseMaritimeSurfaceResp.cpp  CigiBaseMotionTrackCtrl.cpp  CigiBasePositionReq.cpp  CigiBasePositionResp.cpp  CigiBaseSOF.cpp  CigiBaseSensorCtrl.cpp  (+186 more)
