
# (BTW - if you use include_HEADERS instead of pkginclude_HEADERS, you 
# will end up with your headers installed in /usr/local/include rather than 
# /usr/local/include/cigicl)
# headers to be installed when 'make install' is run:
pkginclude_HEADERS = \
	CigiAccelerationCtrlV4.h \
	CigiAerosolRespV3.h \
	CigiAerosolRespV4.h \
	CigiAllPackets.h \
	CigiAnimationCtrlV4.h \
	CigiAnimationStopV3.h \
	CigiAnimationStopV4.h \
	CigiAnimationTable.h \
	CigiArtPartCtrlV1.h \
	CigiArtPartCtrlV2.h \
	CigiArtPartCtrlV3.h \
	CigiArtPartCtrlV4.h \
	CigiAtmosCtrl.h \
	CigiAtmosCtrlV4.h \
	CigiBaseAerosolResp.h \
	CigiBaseAnimationCtrl.h \
	CigiBaseAnimationStop.h \
	CigiBaseArtPartCtrl.h \
	CigiBaseCircleSymbolData.h \
	CigiBaseCircleSymbolTextureData.h \
	CigiBaseCollDetSegDef.h \
	CigiBaseCollDetSegResp.h \
	CigiBaseCollDetVolDef.h \
	CigiBaseCollDetVolResp.h \
	CigiBaseCompCtrl.h \
	CigiBaseConfClampEntityCtrl.h \
	CigiBaseEarthModelDef.h \
	CigiBaseEntityCtrl.h \
	CigiBaseEntityPositionCtrl.h \
	CigiBaseEnvCondReq.h \
	CigiBaseEnvCtrl.h \
	CigiBaseEnvRgnCtrl.h \
	CigiBaseEventNotification.h \
	CigiBaseEventProcessor.h \
	CigiBaseHatHotReq.h \
	CigiBaseHatHotResp.h \
	CigiBaseIGCtrl.h \
	CigiBaseIGMsg.h \
	CigiBaseLosResp.h \
	CigiBaseLosSegReq.h \
	CigiBaseLosVectReq.h \
	CigiBaseMaritimeSurfaceCtrl.h \
	CigiBaseMaritimeSurfaceResp.h \
	CigiBaseMotionTrackCtrl.h \
	CigiBasePacket.h \
	CigiBasePositionReq.h \
	CigiBasePositionResp.h \
	CigiBaseRateCtrl.h \
	CigiBaseSensorCtrl.h \
	CigiBaseSensorResp.h \
	CigiBaseShortArtPartCtrl.h \
	CigiBaseShortSymbolCtrl.h \
	CigiBaseSignalProcessing.h \
	CigiBaseSOF.h \
	CigiBaseSpecEffDef.h \
	CigiBaseSymbolCircleDef.h \
	CigiBaseSymbolClone.h \
	CigiBaseSymbolCtrl.h \
	CigiBaseSymbolLineDef.h \
	CigiBaseSymbolSurfaceDef.h \
	CigiBaseSymbolTextDef.h \
	CigiBaseSymbolTexturedCircleDef.h \
	CigiBaseSymbolTexturedPolygonDef.h \
	CigiBaseTerrestrialSurfaceCtrl.h \
	CigiBaseTerrestrialSurfaceResp.h \
	CigiBaseTrajectoryDef.h \
	CigiBaseVariableSizePckt.h \
	CigiBaseVertexSymbolData.h \
	CigiBaseViewCtrl.h \
	CigiBaseViewDef.h \
	CigiBaseWaveCtrl.h \
	CigiBaseWeatherCondResp.h \
	CigiBaseWeatherCtrl.h \
	CigiCelestialCtrl.h \
	CigiCelestialCtrlV4.h \
	CigiCircleSymbolDataV3_3.h \
	CigiCircleSymbolDataV4.h \
	CigiCircleSymbolTextureDataV4.h \
	CigiCnvtInfoType.h \
	CigiCollDetSegDefV1.h \
	CigiCollDetSegDefV2.h \
	CigiCollDetSegDefV3.h \
	CigiCollDetSegDefV4.h \
	CigiCollDetSegRespV1.h \
	CigiCollDetSegRespV2.h \
	CigiCollDetSegRespV3.h \
	CigiCollDetSegRespV4.h \
	CigiCollDetVolDefV2.h \
	CigiCollDetVolDefV3.h \
	CigiCollDetVolDefV4.h \
	CigiCollDetVolRespV2.h \
	CigiCollDetVolRespV3.h \
	CigiCollDetVolRespV4.h \
	CigiCompCtrlV1.h \
	CigiCompCtrlV2.h \
	CigiCompCtrlV3.h \
	CigiCompCtrlV3_3.h \
	CigiCompCtrlV4.h \
	CigiConfClampEntityCtrlV3.h \
	CigiConfClampEntityCtrlV4.h \
	CigiDefaultPacket.h \
	CigiEarthModelDefV3.h \
	CigiEarthModelDefV4.h \
	CigiEntityCtrlV1.h \
	CigiEntityCtrlV2.h \
	CigiEntityCtrlV3.h \
	CigiEntityCtrlV3_3.h \
	CigiEntityCtrlV4.h \
	CigiEntityPositionCtrlV4.h \
	CigiEnvCondReqV3.h \
	CigiEnvCondReqV4.h \
	CigiEnvCtrlV1.h \
	CigiEnvCtrlV2.h \
	CigiEnvRgnCtrlV3.h \
	CigiEnvRgnCtrlV4.h \
	CigiErrorCodes.h \
	CigiEventNotificationV3.h \
	CigiEventNotificationV4.h \
	CigiException.h \
	CigiExceptions.h \
	CigiHatHotReqV3.h \
	CigiHatHotReqV3_2.h \
	CigiHatHotReqV4.h \
	CigiHatHotRespV3.h \
	CigiHatHotRespV3_2.h \
	CigiHatHotRespV4.h \
	CigiHatHotXRespV3.h \
	CigiHatHotXRespV3_2.h \
	CigiHatHotXRespV4.h \
	CigiHatReqV1.h \
	CigiHatReqV2.h \
	CigiHatRespV1.h \
	CigiHatRespV2.h \
	CigiHoldEnvCtrl.h \
	CigiHostSession.h \
	CigiHotReqV2.h \
	CigiHotRespV2.h \
	CigiIGCtrlV1.h \
	CigiIGCtrlV2.h \
	CigiIGCtrlV3.h \
	CigiIGCtrlV3_2.h \
	CigiIGCtrlV3_3.h \
	CigiIGCtrlV4.h \
	CigiIGMsgV2.h \
	CigiIGMsgV3.h \
	CigiIGMsgV4.h \
	CigiIGSession.h \
	CigiIncomingMsg.h \
	CigiIO.h \
	CigiLosRespV1.h \
	CigiLosRespV2.h \
	CigiLosRespV3.h \
	CigiLosRespV3_2.h \
	CigiLosRespV4.h \
	CigiLosSegReqV1.h \
	CigiLosSegReqV2.h \
	CigiLosSegReqV3.h \
	CigiLosSegReqV3_2.h \
	CigiLosSegReqV4.h \
	CigiLosVectReqV1.h \
	CigiLosVectReqV2.h \
	CigiLosVectReqV3.h \
	CigiLosVectReqV3_2.h \
	CigiLosVectReqV4.h \
	CigiLosXRespV3.h \
	CigiLosXRespV3_2.h \
	CigiLosXRespV4.h \
	CigiMaritimeSurfaceCtrlV3.h \
	CigiMaritimeSurfaceCtrlV4.h \
	CigiMaritimeSurfaceRespV3.h \
	CigiMaritimeSurfaceRespV4.h \
	CigiMessage.h \
	CigiMessageBuffer.h \
	CigiMotionTrackCtrlV3.h \
	CigiMotionTrackCtrlV4.h \
	CigiOutgoingMsg.h \
	CigiPositionReqV3.h \
	CigiPositionReqV4.h \
	CigiPositionRespV3.h \
	CigiPositionRespV4.h \
	CigiProcessType.h \
	CigiRateCtrlV1.h \
	CigiRateCtrlV2.h \
	CigiRateCtrlV3.h \
	CigiRateCtrlV3_2.h \
	CigiSensorCtrlV1.h \
	CigiSensorCtrlV2.h \
	CigiSensorCtrlV3.h \
	CigiSensorCtrlV4.h \
	CigiSensorRespV1.h \
	CigiSensorRespV2.h \
	CigiSensorRespV3.h \
	CigiSensorRespV4.h \
	CigiSensorXRespV3.h \
	CigiSensorXRespV4.h \
	CigiSession.h \
	CigiShortArtPartCtrlV3.h \
	CigiShortArtPartCtrlV4.h \
	CigiShortCompCtrlV3.h \
	CigiShortCompCtrlV3_3.h \
	CigiShortCompCtrlV4.h \
	CigiShortSymbolCtrlV3_3.h \
	CigiShortSymbolCtrlV4.h \
	CigiSignalType.h \
	CigiSOFV1.h \
	CigiSOFV2.h \
	CigiSOFV3.h \
	CigiSOFV3_2.h \
	CigiSOFV4.h \
	CigiSpecEffDefV1.h \
	CigiSpecEffDefV2.h \
	CigiSwapping.h \
	CigiSymbolCircleDefV3_3.h \
	CigiSymbolCircleDefV4.h \
	CigiSymbolCloneV3_3.h \
	CigiSymbolCloneV4.h \
	CigiSymbolCtrlV3_3.h \
	CigiSymbolCtrlV4.h \
	CigiSymbolLineDefV3_3.h \
	CigiSymbolPolygonDefV4.h \
	CigiSymbolSurfaceDefV3_3.h \
	CigiSymbolSurfaceDefV4.h \
	CigiSymbolTextDefV3_3.h \
	CigiSymbolTextDefV4.h \
	CigiSymbolTexturedCircleDefV4.h \
	CigiSymbolTexturedPolygonDefV4.h \
	CigiTerrestrialSurfaceCtrlV3.h \
	CigiTerrestrialSurfaceCtrlV4.h \
	CigiTerrestrialSurfaceRespV3.h \
	CigiTerrestrialSurfaceRespV4.h \
	CigiTrajectoryDefV1.h \
	CigiTrajectoryDefV2.h \
	CigiTrajectoryDefV3.h \
	CigiTypes.h \
	CigiTypes_Default.h \
	CigiTypes_MSVS_Win32.h \
	CigiVelocityCtrlV4.h \
	CigiVersionID.h \
	CigiVertexSymbolDataV3_3.h \
	CigiVertexSymbolDataV4.h \
	CigiVertexSymbolTextureDataV4.h \
	CigiViewCtrlV1.h \
	CigiViewCtrlV2.h \
	CigiViewCtrlV3.h \
	CigiViewCtrlV4.h \
	CigiViewDefV1.h \
	CigiViewDefV2.h \
	CigiViewDefV3.h \
	CigiViewDefV4.h \
	CigiWaveCtrlV3.h \
	CigiWaveCtrlV4.h \
	CigiWeatherCondRespV3.h \
	CigiWeatherCondRespV4.h \
	CigiWeatherCtrlV1.h \
	CigiWeatherCtrlV2.h \
	CigiWeatherCtrlV3.h \
	CigiWeatherCtrlV4.h


