lib_LTLIBRARIES = libcigicl.la 

# all of the source files needed to compile the lib
libcigicl_la_SOURCES = \
	CigiAnimationTable.cpp \
	CigiIGSession.cpp \
	CigiIncomingMsg.cpp \
	CigiIO.cpp \
	CigiSession.cpp \
	CigiSwapping.cpp \
	CigiBaseAerosolResp.cpp \
	CigiBaseAnimationCtrl.cpp \
	CigiBaseArtPartCtrl.cpp \
	CigiBaseCircleSymbolData.cpp \
	CigiBaseCircleSymbolTextureData.cpp \
	CigiBaseCollDetSegDef.cpp \
	CigiBaseCollDetSegResp.cpp \
	CigiBaseCollDetVolDef.cpp \
	CigiBaseCollDetVolResp.cpp \
	CigiBaseConfClampEntityCtrl.cpp \
	CigiBaseEarthModelDef.cpp \
	CigiBaseEntityCtrl.cpp \
	CigiBaseEntityPositionCtrl.cpp \
	CigiBaseEnvCondReq.cpp \
	CigiBaseEnvCtrl.cpp \
	CigiBaseEnvRgnCtrl.cpp \
	CigiBaseEventNotification.cpp \
	CigiBaseHatHotReq.cpp \
	CigiBaseIGCtrl.cpp \
	CigiBaseLosResp.cpp \
	CigiBaseLosSegReq.cpp \
	CigiBaseLosVectReq.cpp \
	CigiBaseMaritimeSurfaceCtrl.cpp \
	CigiBaseMaritimeSurfaceResp.cpp \
	CigiBaseMotionTrackCtrl.cpp \
	CigiBasePositionReq.cpp \
	CigiBasePositionResp.cpp \
	CigiBaseSensorCtrl.cpp \
	CigiBaseSensorResp.cpp \
	CigiBaseShortArtPartCtrl.cpp \
	CigiBaseShortSymbolCtrl.cpp \
	CigiBaseSOF.cpp \
	CigiBaseSpecEffDef.cpp \
	CigiBaseSymbolCircleDef.cpp \
	CigiBaseSymbolClone.cpp \
	CigiBaseSymbolCtrl.cpp \
	CigiBaseSymbolLineDef.cpp \
	CigiBaseSymbolSurfaceDef.cpp \
	CigiBaseSymbolTextDef.cpp \
	CigiBaseSymbolTexturedCircleDef.cpp \
	CigiBaseSymbolTexturedPolygonDef.cpp \
	CigiBaseTerrestrialSurfaceCtrl.cpp \
	CigiBaseTrajectoryDef.cpp \
	CigiBaseViewCtrl.cpp \
	CigiBaseViewDef.cpp \
	CigiBaseWaveCtrl.cpp \
	CigiBaseWeatherCondResp.cpp \
	CigiBaseWeatherCtrl.cpp \
	CigiArtPartCtrlV1.cpp \
	CigiCollDetSegDefV1.cpp \
	CigiCollDetSegRespV1.cpp \
	CigiCompCtrlV1.cpp \
	CigiEntityCtrlV1.cpp \
	CigiEnvCtrlV1.cpp \
	CigiHatReqV1.cpp \
	CigiHatRespV1.cpp \
	CigiIGCtrlV1.cpp \
	CigiLosRespV1.cpp \
	CigiLosSegReqV1.cpp \
	CigiLosVectReqV1.cpp \
	CigiRateCtrlV1.cpp \
	CigiSensorCtrlV1.cpp \
	CigiSensorRespV1.cpp \
	CigiSOFV1.cpp \
	CigiSpecEffDefV1.cpp \
	CigiTrajectoryDefV1.cpp \
	CigiViewCtrlV1.cpp \
	CigiViewDefV1.cpp \
	CigiWeatherCtrlV1.cpp \
	CigiArtPartCtrlV2.cpp \
	CigiCollDetSegDefV2.cpp \
	CigiCollDetSegRespV2.cpp \
	CigiCollDetVolDefV2.cpp \
	CigiCollDetVolRespV2.cpp \
	CigiCompCtrlV2.cpp \
	CigiEntityCtrlV2.cpp \
	CigiEnvCtrlV2.cpp \
	CigiHatReqV2.cpp \
	CigiHatRespV2.cpp \
	CigiHotReqV2.cpp \
	CigiHotRespV2.cpp \
	CigiIGCtrlV2.cpp \
	CigiIGMsgV2.cpp \
	CigiLosRespV2.cpp \
	CigiLosSegReqV2.cpp \
	CigiLosVectReqV2.cpp \
	CigiRateCtrlV2.cpp \
	CigiSensorCtrlV2.cpp \
	CigiSensorRespV2.cpp \
	CigiSOFV2.cpp \
	CigiSpecEffDefV2.cpp \
	CigiTrajectoryDefV2.cpp \
	CigiViewCtrlV2.cpp \
	CigiViewDefV2.cpp \
	CigiWeatherCtrlV2.cpp \
	CigiAerosolRespV3.cpp \
	CigiAnimationStopV3.cpp \
	CigiArtPartCtrlV3.cpp \
	CigiAtmosCtrl.cpp \
	CigiCelestialCtrl.cpp \
	CigiCircleSymbolDataV3_3.cpp \
	CigiCollDetSegDefV3.cpp \
	CigiCollDetSegRespV3.cpp \
	CigiCollDetVolDefV3.cpp \
	CigiCollDetVolRespV3.cpp \
	CigiCompCtrlV3.cpp \
	CigiCompCtrlV3_3.cpp \
	CigiConfClampEntityCtrlV3.cpp \
	CigiDefaultPacket.cpp \
	CigiEarthModelDefV3.cpp \
	CigiEntityCtrlV3.cpp \
	CigiEntityCtrlV3_3.cpp \
	CigiEnvCondReqV3.cpp \
	CigiEnvRgnCtrlV3.cpp \
	CigiEventNotificationV3.cpp \
	CigiHatHotReqV3.cpp \
	CigiHatHotReqV3_2.cpp \
	CigiHatHotRespV3.cpp \
	CigiHatHotRespV3_2.cpp \
	CigiHatHotXRespV3.cpp \
	CigiHatHotXRespV3_2.cpp \
	CigiHostSession.cpp \
	CigiIGCtrlV3.cpp \
	CigiIGCtrlV3_2.cpp \
	CigiIGCtrlV3_3.cpp \
	CigiIGMsgV3.cpp \
	CigiLosRespV3.cpp \
	CigiLosRespV3_2.cpp \
	CigiLosSegReqV3.cpp \
	CigiLosSegReqV3_2.cpp \
	CigiLosVectReqV3.cpp \
	CigiLosVectReqV3_2.cpp \
	CigiLosXRespV3.cpp \
	CigiLosXRespV3_2.cpp \
	CigiMaritimeSurfaceCtrlV3.cpp \
	CigiMaritimeSurfaceRespV3.cpp \
	CigiMessage.cpp \
	CigiMotionTrackCtrlV3.cpp \
	CigiOutgoingMsg.cpp \
	CigiPositionReqV3.cpp \
	CigiPositionRespV3.cpp \
	CigiRateCtrlV3.cpp \
	CigiRateCtrlV3_2.cpp \
	CigiSensorCtrlV3.cpp \
	CigiSensorRespV3.cpp \
	CigiSensorXRespV3.cpp \
	CigiShortArtPartCtrlV3.cpp \
	CigiShortCompCtrlV3.cpp \
	CigiShortCompCtrlV3_3.cpp \
	CigiShortSymbolCtrlV3_3.cpp \
	CigiSOFV3.cpp \
	CigiSOFV3_2.cpp \
	CigiSymbolCircleDefV3_3.cpp \
	CigiSymbolCloneV3_3.cpp \
	CigiSymbolCtrlV3_3.cpp \
	CigiSymbolLineDefV3_3.cpp \
	CigiSymbolSurfaceDefV3_3.cpp \
	CigiSymbolTextDefV3_3.cpp \
	CigiTerrestrialSurfaceCtrlV3.cpp \
	CigiTerrestrialSurfaceRespV3.cpp \
	CigiTrajectoryDefV3.cpp \
	CigiVertexSymbolDataV3_3.cpp \
	CigiViewCtrlV3.cpp \
	CigiViewDefV3.cpp \
	CigiWaveCtrlV3.cpp \
	CigiWeatherCondRespV3.cpp \
	CigiWeatherCtrlV3.cpp \
	CigiAccelerationCtrlV4.cpp \
	CigiAerosolRespV4.cpp \
	CigiAnimationCtrlV4.cpp \
	CigiAnimationStopV4.cpp \
	CigiArtPartCtrlV4.cpp \
	CigiAtmosCtrlV4.cpp \
	CigiCelestialCtrlV4.cpp \
	CigiCircleSymbolDataV4.cpp \
	CigiCircleSymbolTextureDataV4.cpp \
	CigiCollDetSegDefV4.cpp \
	CigiCollDetSegRespV4.cpp \
	CigiCollDetVolDefV4.cpp \
	CigiCollDetVolRespV4.cpp \
	CigiCompCtrlV4.cpp \
	CigiConfClampEntityCtrlV4.cpp \
	CigiEarthModelDefV4.cpp \
	CigiEntityCtrlV4.cpp \
	CigiEntityPositionCtrlV4.cpp \
	CigiEnvCondReqV4.cpp \
	CigiEnvRgnCtrlV4.cpp \
	CigiEventNotificationV4.cpp \
	CigiHatHotReqV4.cpp \
	CigiHatHotRespV4.cpp \
	CigiHatHotXRespV4.cpp \
	CigiIGCtrlV4.cpp \
	CigiIGMsgV4.cpp \
	CigiLosRespV4.cpp \
	CigiLosSegReqV4.cpp \
	CigiLosVectReqV4.cpp \
	CigiLosXRespV4.cpp \
	CigiMaritimeSurfaceCtrlV4.cpp \
	CigiMaritimeSurfaceRespV4.cpp \
	CigiMotionTrackCtrlV4.cpp \
	CigiPositionReqV4.cpp \
	CigiPositionRespV4.cpp \
	CigiSensorCtrlV4.cpp \
	CigiSensorRespV4.cpp \
	CigiSensorXRespV4.cpp \
	CigiShortArtPartCtrlV4.cpp \
	CigiShortCompCtrlV4.cpp \
	CigiShortSymbolCtrlV4.cpp \
	CigiSOFV4.cpp \
	CigiSymbolCircleDefV4.cpp \
	CigiSymbolCloneV4.cpp \
	CigiSymbolCtrlV4.cpp \
	CigiSymbolPolygonDefV4.cpp \
	CigiSymbolSurfaceDefV4.cpp \
	CigiSymbolTextDefV4.cpp \
	CigiSymbolTexturedCircleDefV4.cpp \
	CigiSymbolTexturedPolygonDefV4.cpp \
	CigiTerrestrialSurfaceCtrlV4.cpp \
	CigiTerrestrialSurfaceRespV4.cpp \
	CigiVelocityCtrlV4.cpp \
	CigiVertexSymbolDataV4.cpp \
	CigiVertexSymbolTextureDataV4.cpp \
	CigiViewCtrlV4.cpp \
	CigiViewDefV4.cpp \
	CigiWaveCtrlV4.cpp \
	CigiWeatherCondRespV4.cpp \
	CigiWeatherCtrlV4.cpp



INCLUDES = \
	-I$(top_srcdir)/include

# The arguments below will be passed to libtool (a linker wrapper) and 
# are very necessary.  Particularly, the "-no-undefined" flag is required for 
# building DLLs on cygwin/win32 platforms.
libcigicl_la_LDFLAGS = \
		-no-undefined\
		-version-info 0:0:0

